--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Refresh</string>
     <string name="update_info">Scanning</string>
+    <string name="title_activity_tracking">TrackingActivity</string>
 
 </resources>
