--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="update_info">Scanning</string>
     <string name="title_activity_tracking">TrackingActivity</string>
     <string name="ssid_ssid">RSSI :</string>
+    <string name="button_wifiliste">Zurück zur Wifiliste</string>
+    <string name="button_tracking">Tracking beenden</string>
 
 </resources>
