--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Wifiprojekt</string>
+    <string name="app_name">Wifisonde</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Refresh</string>
     <string name="update_info">Scanning</string>
